--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -1,175 +1,202 @@
 * {
-	margin:0px;
-	padding:0px;
+    margin: 0px;
+    padding: 0px;
 }
+
 img {
-	border:0px;
+    border: 0px;
 }
+
 ::-webkit-scrollbar {
-	width:10px;
-	height:10px;
-	background-color:#fff;
-	box-shadow:inset 1px 1px 0 rgba(0,0,0,.1),inset -1px -1px 0 rgba(0,0,0,.07);
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px -1px 0 rgba(0, 0, 0, .07);
 }
+
 ::-webkit-scrollbar:hover {
-	background-color:#eee;
+    background-color: #eee;
 }
+
 ::-webkit-resizer {
-	-webkit-border-radius:4px;
-	background-color:#666;
+    -webkit-border-radius: 4px;
+    background-color: #666;
 }
+
 ::-webkit-scrollbar-thumb {
-	min-height:0.8em;
-	min-width:0.8em;
-	background-color:rgba(0,0,0,.2);
-	box-shadow:inset 1px 1px 0 rgba(0,0,0,.1),inset -1px -1px 0 rgba(0,0,0,.07);
+    min-height: 0.8em;
+    min-width: 0.8em;
+    background-color: rgba(0, 0, 0, .2);
+    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, .1), inset -1px -1px 0 rgba(0, 0, 0, .07);
 }
+
 ::-webkit-scrollbar-thumb:hover {
-	background-color:#bbb;
+    background-color: #bbb;
 }
+
 ::-webkit-scrollbar-thumb:active {
-	background-color:#888;
+    background-color: #888;
 }
+
 body {
-	font: 62.5% "Trebuchet MS", sans-serif;
-	margin-left:25px;
-	margin-right:30px;
-	margin-top:30px;
-	margin-bottom:20px;
-	background-color:rgba(204,204,204,0.15);
+    font: 62.5% "Trebuchet MS", sans-serif;
+    margin-left: 25px;
+    margin-right: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    background-color: rgba(204, 204, 204, 0.15);
 }
+
 .headline {
-	width:1300px;
-	height:80px;
+    width: 1300px;
+    height: 80px;
 }
+
 .headline .header {
-	font-family:'DroidSansBold';
-	font-size:60px;
-	color:rgba(153,153,153,1);
-	margin-bottom:20px;
-	float:left;
+    font-family: 'DroidSansBold';
+    font-size: 60px;
+    color: rgba(153, 153, 153, 1);
+    margin-bottom: 20px;
+    float: left;
 }
+
 .headline .tagline {
-	font-family:'DroidSansRegular';
-	font-size:10px;
-	float:left;
-	letter-spacing:5px;
-	top:20px;
-	margin-left:25px; 
-	color:rgba(153,153,153,1);
-	position:relative;
+    font-family: 'DroidSansRegular';
+    font-size: 10px;
+    float: left;
+    letter-spacing: 5px;
+    top: 20px;
+    margin-left: 25px;
+    color: rgba(153, 153, 153, 1);
+    position: relative;
 }
+
 .headline .logo {
-	position:relative;
-	top:-20px;
-	opacity:0.5;
-	float:right;
+    position: relative;
+    top: -20px;
+    opacity: 0.5;
+    float: right;
 }
+
 .movieStrip {
-	width:1275px;
-	border:1px solid rgba(204,204,204,1);
-	height:150px;
-	padding-left:25px;
-	padding-top:15px;
-	font-size:12px;
-	font-family:Verdana, Geneva, sans-serif;
-	background-color:rgba(255,255,255,1);
-	margin-bottom:10px;
-	-moz-border-radius:5px;
-	border-radius:5px;
+    width: 1275px;
+    border: 1px solid rgba(204, 204, 204, 1);
+    height: 150px;
+    padding-left: 25px;
+    padding-top: 15px;
+    font-size: 12px;
+    font-family: Verdana, Geneva, sans-serif;
+    background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 10px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
+
 .showInfo {
-	width:1275px;
-	border:1px solid rgba(204,204,204,1);
-	height:30px;
-	padding-left:25px; 
-	padding-top:15px;
-	font-size:12px;
-	font-family:Verdana, Geneva, sans-serif;
-	background-color:rgba(255,255,255,1);
-	margin-bottom:10px;
-	-moz-border-radius:5px;
-	border-radius:5px;
+    width: 1275px;
+    border: 1px solid rgba(204, 204, 204, 1);
+    height: 30px;
+    padding-left: 25px;
+    padding-top: 15px;
+    font-size: 12px;
+    font-family: Verdana, Geneva, sans-serif;
+    background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 10px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
+
 .showInfo .title {
-	float:left;
-	margin-right:40px;
+    float: left;
+    margin-right: 40px;
 }
+
 .showInfo .title_halfCount {
-	float:left;
-	margin-right:5px;
+    float: left;
+    margin-right: 5px;
 }
+
 .showInfo .spinner_halfCount {
-	height:22px;
-	width:35px;
-	top:-5px;
-	position:relative;
-	padding-right:5px;
-	text-align:right;
-	float:left;
-	margin-right:40px;
+    height: 22px;
+    width: 35px;
+    top: -5px;
+    position: relative;
+    padding-right: 5px;
+    text-align: right;
+    float: left;
+    margin-right: 40px;
 }
+
 .screenBlock {
-	width:1300px;
-	border:1px solid rgba(204,204,204,1);
-	height:55px;
-	padding-top:5px;
-	letter-spacing:10px;
-	background-color:rgba(255,255,255,1);
-	margin-bottom:10px;
-	font-family:'DroidSansBold';
-	font-size:60px;
-	vertical-align:middle;
-	color:rgba(102,102,102,0.75); 
-	background-color:rgba(255,255,102,1);
-	text-align:center;
-	-moz-border-radius:5px;
-	border-radius:5px;
+    width: 1300px;
+    border: 1px solid rgba(204, 204, 204, 1);
+    height: 55px;
+    padding-top: 5px;
+    letter-spacing: 10px;
+    background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 10px;
+    font-family: 'DroidSansBold';
+    font-size: 60px;
+    vertical-align: middle;
+    color: rgba(102, 102, 102, 0.75);
+    background-color: rgba(255, 255, 102, 1);
+    text-align: center;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
+
 .seatingArrangement {
-	width:1290px;
-	border:1px solid rgba(204,204,204,1);
-	height:690px;
-	background-color:rgba(255,255,255,1);
-	-moz-border-radius:5px;
-	border-radius:5px;
-	padding:5px;
+    width: 1290px;
+    border: 1px solid rgba(204, 204, 204, 1);
+    height: 690px;
+    background-color: rgba(255, 255, 255, 1);
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 5px;
 }
+
 table.plan td {
-	width:40px;
-	height:25px;
-	padding-top:15px;
-	font-family:'DroidSansBold';
-	font-size:12px;
-	text-align:center;
-	background:url(../images/blankSeat.png);
-	background-color:#FFFFFF;
+    width: 40px;
+    height: 25px;
+    padding-top: 15px;
+    font-family: 'DroidSansBold';
+    font-size: 12px;
+    text-align: center;
+    background: url(../images/blankSeat.png);
+    background-color: #FFFFFF;
 }
+
 table.plan td:hover {
-	cursor:pointer;
+    cursor: pointer;
 }
+
 table.plan td.blank {
-	background:none;
-	cursor:default;
-	background-color:rgba(255,255,255,1);
+    background: none;
+    cursor: default;
+    background-color: rgba(255, 255, 255, 1);
 }
+
 table.plan td.sampath {
-	background-color:rgba(255,204,51,1);
+    background-color: rgba(255, 204, 51, 1);
 }
+
 table.plan td.ctmgmt {
-	background-color:rgba(255,55,61,1);
+    background-color: rgba(255, 55, 61, 1);
 }
+
 .btnBlock {
-	margin-top:15px;
-	text-align:center;
-	width:1300px;
+    margin-top: 15px;
+    text-align: center;
+    width: 1300px;
 }
+
 .btnSeatplan {
-	width:300px;
-	height:35px;
+    width: 300px;
+    height: 35px;
 }
+
 .makeReservationTop {
-	float:right;
-	top:-10px;
-	right:5px;
+    float: right;
+    top: -10px;
+    right: 5px;
 }
