--- a/views/seatplans/SeatPlan_Superior.html
+++ b/views/seatplans/SeatPlan_Superior.html
@@ -1,55 +1,62 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>DDRS | Majestic Cineplex - SUPERIOR</title>
-<script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
-<script type="text/javascript" src="./js/jquery-ui-1.10.3.custom.min.js"></script>
-<script type="text/javascript" src="./js/seatingArrangement.js"></script>
-<script>
-	var reservedList="{{seatListOutString}}";
-	var view="{{seat_view}}";
-	$(function() {
-		$( "#majesticCineplex" ).button();
-		$( "#superiorCinema" ).button();
-		$( "#makeReservationTop" ).button();
-		$( "#makeReservationBottom" ).button();
-	});
-</script>
-<link rel="stylesheet" type="text/css" href="./css/styles.css"/>
-<link rel="stylesheet" type="text/css" href="./css/smoothness/jquery-ui-1.10.3.custom.min.css"/>
-<link rel="stylesheet" type="text/css" href="./fontkits/Droid-Sans/DroidSans.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>DDRS | Majestic Cineplex - SUPERIOR</title>
+    <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="./js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script type="text/javascript" src="./js/seatingArrangement.js"></script>
+    <script>
+        var reservedList = "{{seatListOutString}}";
+        var view = "{{seat_view}}";
+        $(function () {
+            $("#majesticCineplex").button();
+            $("#superiorCinema").button();
+            $("#makeReservationTop").button();
+            $("#makeReservationBottom").button();
+        });
+    </script>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/smoothness/jquery-ui-1.10.3.custom.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./fontkits/Droid-Sans/DroidSans.css"/>
 </head>
 
 <body>
 <div class="headline">
-  <p class="header">Majestic Cineplex - SUPERIOR</p>
-  <p class="tagline">A CEYLON THEATRES CINEMA</p>
-  <img src="images/MajesticCineplex_logo.png" height="90" class="logo" />
+    <p class="header">Majestic Cineplex - SUPERIOR</p>
+
+    <p class="tagline">A CEYLON THEATRES CINEMA</p>
+    <img src="images/MajesticCineplex_logo.png" height="90" class="logo"/>
 </div>
 <div class="movieStrip" style="background:url(images/MC_Superior.jpg);"></div>
 <form action="/seatplan" method="post" id="form">
 <div class="showInfo">
-	<input type="hidden" name="show" value="{{ show }}" />
-  <input type="hidden" name="cinema_id" value="{{ cinema_id }}" />
-	<p class="title">Showtime: {{ showtimeview }}</p>
-  <p class="title">Movie: {{ film }}</p>
-  {% if seat_view == 'public' %}
-  <p class="title_halfCount">Half Tickets Count:</p>
-  <input name="odc_half" id="odc_half" type="number" min="0" value="0" class="spinner_halfCount" onchange="changeval()" />
-  {% endif %}
-  <p class="title">Total Tickets: <label id="totalCount">0</label>
-  {% if seat_view == 'public' %}&nbsp;= ( Full: <label id="fullCount">0</label> + Half: <label id="halfCount">0</label> ){% endif %}</p>
-  {% for seat_type in seat_types %}
-  <input type="hidden" id="inp_{{seat_type}}" name="{{seat_type}}" value="0"/>
-  {% endfor %}
-  <input id="makeReservationTop" name="makeReservationTop" type="submit" onclick="formSubmit()" value="Make Reservation" class="btnSeatplan makeReservationTop" />
+    <input type="hidden" name="show" value="{{ show }}"/>
+    <input type="hidden" name="cinema_id" value="{{ cinema_id }}"/>
+
+    <p class="title">Showtime: {{ showtimeview }}</p>
+
+    <p class="title">Movie: {{ film }}</p>
+    {% if seat_view == 'public' %}
+    <p class="title_halfCount">Half Tickets Count:</p>
+    <input name="odc_half" id="odc_half" type="number" min="0" value="0" class="spinner_halfCount"
+           onchange="changeval()"/>
+    {% endif %}
+    <p class="title">Total Tickets: <label id="totalCount">0</label>
+        {% if seat_view == 'public' %}&nbsp;= ( Full: <label id="fullCount">0</label> + Half: <label
+                id="halfCount">0</label> ){% endif %}</p>
+    {% for seat_type in seat_types %}
+    <input type="hidden" id="inp_{{seat_type}}" name="{{seat_type}}" value="0"/>
+    {% endfor %}
+    <input id="makeReservationTop" name="makeReservationTop" type="button" onclick="formSubmit()"
+           value="Make Reservation" class="btnSeatplan makeReservationTop"/>
 </div>
 <div class="screenBlock">SCREEN</div>
 <div class="seatingArrangement" align="center" style="height:385px;">
-  <div style="width:1125px;">
-    <table border="0" cellspacing="5" cellpadding="5" class="plan" style="float:left;">
-      <tr>
+<div style="width:1125px;">
+<table border="0" cellspacing="5" cellpadding="5" class="plan" style="float:left;">
+    <tr>
         <td class="blank"></td>
         <td>H23</td>
         <td>H22</td>
@@ -62,8 +69,8 @@
         <td>H15</td>
         <td>H14</td>
         <td>H13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>G24</td>
         <td>G23</td>
         <td>G22</td>
@@ -76,8 +83,8 @@
         <td>G15</td>
         <td>G14</td>
         <td>G13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>F24</td>
         <td>F23</td>
         <td>F22</td>
@@ -90,8 +97,8 @@
         <td>F15</td>
         <td>F14</td>
         <td>F13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class="blank"></td>
         <td>E23</td>
         <td>E22</td>
@@ -104,8 +111,8 @@
         <td>E15</td>
         <td>E14</td>
         <td>E13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>D24</td>
         <td>D23</td>
         <td>D22</td>
@@ -118,8 +125,8 @@
         <td>D15</td>
         <td>D14</td>
         <td>D13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class="ctmgmt">C24</td>
         <td class="ctmgmt">C23</td>
         <td class="ctmgmt">C22</td>
@@ -132,8 +139,8 @@
         <td class="ctmgmt">C15</td>
         <td class="ctmgmt">C14</td>
         <td class="ctmgmt">C13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class="blank"></td>
         <td>B23</td>
         <td>B22</td>
@@ -146,8 +153,8 @@
         <td>B15</td>
         <td>B14</td>
         <td>B13</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td class="blank"></td>
         <td>A23</td>
         <td>A22</td>
@@ -160,10 +167,10 @@
         <td>A15</td>
         <td class="blank"></td>
         <td class="blank"></td>
-      </tr>
-    </table>
-    <table border="0" cellspacing="5" cellpadding="5" class="plan" style="float:left; margin-left:35px;">
-      <tr>
+    </tr>
+</table>
+<table border="0" cellspacing="5" cellpadding="5" class="plan" style="float:left; margin-left:35px;">
+    <tr>
         <td>H12</td>
         <td>H11</td>
         <td>H10</td>
@@ -176,8 +183,8 @@
         <td>H3</td>
         <td>H2</td>
         <td>H1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>G12</td>
         <td>G11</td>
         <td>G10</td>
@@ -190,8 +197,8 @@
         <td>G3</td>
         <td>G2</td>
         <td>G1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>F12</td>
         <td>F11</td>
         <td>F10</td>
@@ -204,8 +211,8 @@
         <td>F3</td>
         <td>F2</td>
         <td>F1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>E12</td>
         <td>E11</td>
         <td>E10</td>
@@ -218,8 +225,8 @@
         <td>E3</td>
         <td>E2</td>
         <td>E1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>D12</td>
         <td>D11</td>
         <td>D10</td>
@@ -232,8 +239,8 @@
         <td>D3</td>
         <td>D2</td>
         <td>D1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>C12</td>
         <td>C11</td>
         <td>C10</td>
@@ -246,27 +253,30 @@
         <td>C3</td>
         <td>C2</td>
         <td>C1</td>
-      </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>B12</td>
         <td>B11</td>
         <td>B10</td>
         <td>B9</td>
         <td colspan="8" rowspan="2" class="blank"></td>
-        </tr>
-      <tr>
+    </tr>
+    <tr>
         <td>A12</td>
         <td>A11</td>
         <td>A10</td>
         <td>A9</td>
-      </tr>
-    </table>
-  </div>  
+    </tr>
+</table>
+</div>
 </div>
 <div class="btnBlock">
-	<input id="majesticCineplex" name="majesticCineplex" type="button" value="Majestic Cineplex" class="btnSeatplan" style="float:left;" />
-	<input id="superiorCinema" name="superiorCinema" type="button" value="Superior Cinema" onclick="window.location.href='/'" class="btnSeatplan" />
-  <input id="makeReservationBottom" name="makeReservationBottom" type="submit" onclick="formSubmit()" value="Make Reservation" class="btnSeatplan" style="float:right;" />
+    <input id="majesticCineplex" name="majesticCineplex" type="button" value="Majestic Cineplex" class="btnSeatplan"
+           style="float:left;"/>
+    <input id="superiorCinema" name="superiorCinema" type="button" value="Superior Cinema"
+           onclick="window.location.href='/'" class="btnSeatplan"/>
+    <input id="makeReservationBottom" name="makeReservationBottom" type="button" onclick="formSubmit()"
+           value="Make Reservation" class="btnSeatplan" style="float:right;"/>
 </div>
 </form>
 </body>
