adding waiting gif to make reservation button cliecked, add user details and time to book seat details

--- a/views/seatplans/SeatPlan_Ultra.html
+++ b/views/seatplans/SeatPlan_Ultra.html
@@ -51,6 +51,7 @@
     {% endfor %}
     <input id="makeReservationTop" name="makeReservationTop" type="button" onclick="formSubmit()"
            value="Make Reservation" class="btnSeatplan makeReservationTop"/>
+    <img src="/images/ajax-loader.gif" alt="" style="display: none;position: absolute;" id="busyIcon" class="busy_icon">
 </div>
 <div class="screenBlock">SCREEN</div>
 <div class="seatingArrangement" align="center" style="height:400px;">
